@@ -13,13 +13,25 @@ import net.minecraft.block.Block;
 import net.minecraft.block.SoundType;
 import net.minecraft.block.state.IBlockState;
 import net.minecraft.entity.Entity;
+import net.minecraft.entity.player.EntityPlayer;
 import net.minecraft.init.Blocks;
 import net.minecraft.init.Items;
 import net.minecraft.util.EnumHand;
+import net.minecraft.util.ResourceLocation;
 import net.minecraft.util.SoundCategory;
 import net.minecraft.util.math.BlockPos;
+import net.minecraft.util.text.TextFormatting;
 import net.minecraft.world.World;
 import net.minecraft.world.WorldProvider;
+import net.minecraft.world.storage.loot.LootEntry;
+import net.minecraft.world.storage.loot.LootEntryTable;
+import net.minecraft.world.storage.loot.LootPool;
+import net.minecraft.world.storage.loot.LootTable;
+import net.minecraft.world.storage.loot.LootTableList;
+import net.minecraft.world.storage.loot.LootTableManager;
+import net.minecraft.world.storage.loot.RandomValueRange;
+import net.minecraft.world.storage.loot.conditions.LootCondition;
+import net.minecraftforge.event.LootTableLoadEvent;
 import net.minecraftforge.event.entity.EntityJoinWorldEvent;
 import net.minecraftforge.event.entity.living.LivingDropsEvent;
 import net.minecraftforge.event.entity.player.UseHoeEvent;
@@ -28,6 +40,8 @@ import net.minecraftforge.fml.common.eventhandler.EventPriority;
 import net.minecraftforge.fml.common.eventhandler.SubscribeEvent;
 import zollerngalaxy.blocks.ZGBlockDirt;
 import zollerngalaxy.blocks.ZGBlockGrass;
+import zollerngalaxy.core.ZGLootTables;
+import zollerngalaxy.core.ZollernGalaxyCore;
 import zollerngalaxy.core.dimensions.worldproviders.WorldProviderAltum;
 import zollerngalaxy.items.ZGItems;
 import zollerngalaxy.lib.helpers.ZGHelper;
@@ -42,14 +56,47 @@ import zollerngalaxy.mobs.entities.EntityOinkus;
 import zollerngalaxy.mobs.entities.EntityScorpion;
 import zollerngalaxy.mobs.entities.EntityShark;
 import zollerngalaxy.mobs.entities.interfaces.IShadeEntity;
+import zollerngalaxy.proxy.IProxy;
 import zollerngalaxy.util.CachedEnum;
 
 public class ZGEvents {
+	
+	private ZollernGalaxyCore core = ZollernGalaxyCore.instance();
+	private IProxy proxy = this.core.proxy;
+	
+	@SubscribeEvent(priority = EventPriority.NORMAL, receiveCanceled = true)
+	public void onLootTableLoadEvent(LootTableLoadEvent event) {
+		ResourceLocation lootName = event.getName();
+		if (lootName == LootTableList.GAMEPLAY_FISHING_FISH) {
+			LootTableManager lootMgr = event.getLootTableManager();
+			LootTable lootTbl = event.getTable();
+			LootCondition[] conditions = new LootCondition[] {};
+			RandomValueRange rng = new RandomValueRange(1.0F);
+			RandomValueRange rngBonus = new RandomValueRange(0.0F);
+			LootEntry entryZGFish = new LootEntryTable(ZGLootTables.GAMEPLAY_FISHING, 20, 10, conditions, "zgfishingentry");
+			LootPool pool = new LootPool(new LootEntry[] { entryZGFish }, conditions, rng, rngBonus, "zgfishingpool");
+			lootTbl.addPool(pool);
+		}
+	}
 	
 	@SubscribeEvent(priority = EventPriority.NORMAL, receiveCanceled = true)
 	public void onJoinWorldEvent(EntityJoinWorldEvent event) {
 		World world = event.getWorld();
 		WorldProvider provider = world.provider;
+		if (!world.isRemote) {
+			Entity ent = event.getEntity();
+			if (ent instanceof EntityPlayer) {
+				EntityPlayer player = (EntityPlayer) ent;
+				if (this.core.isInTestMode() || this.core.isInDevMode()) {
+					String txtFormat = TextFormatting.BOLD + "" + TextFormatting.RED;
+					String msg = txtFormat + "WARNING: This is NOT a valid version of Zollern Galaxy! "
+							+ "Please uninstall the mod and install the correct version, or it will not operate correctly.";
+					this.proxy.sendChatMessage(player, msg);
+				}
+			}
+		}
+		
+		// Convert Alien Villagers to Abyssal Villagers
 		if (provider instanceof WorldProviderAltum) {
 			if (!world.isRemote) {
 				Entity entity = event.getEntity();
